java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting/lang.java
package java;

class <error descr="Class 'java.lang' clashes with package of same name">lang</error> { }
